<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_toolbar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/size_40dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_centerVertical="true"
                android:padding="@dimen/distance_10dp"
                android:src="@drawable/ic_back" />


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/distance_8dp"
                android:layout_toRightOf="@+id/img_back"
                android:gravity="center"
                android:text="@string/text_history_create_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/distance_8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_type_product"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <com.demo.store.widgets.spinner.SearchableSpinner
                android:id="@+id/ss_type_product"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.5"
                android:spinnerMode="dialog"
                app:hintText="@string/text_choose_type_product" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_code_so"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <com.demo.store.widgets.spinner.SearchableSpinner
                android:id="@+id/ss_code_so"
                android:layout_width="0dp"
                app:hintText="@string/text_choose_code_so"
                android:layout_height="wrap_content"
                android:layout_weight="3.5" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_customer_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_customer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/distance_8dp"
                android:layout_weight="3.5"
                android:textSize="@dimen/text_16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_floor"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <com.demo.store.widgets.spinner.SearchableSpinner
                android:id="@+id/ss_floor"
                android:layout_width="0dp"
                app:hintText="@string/text_choose_floor_print"
                android:layout_height="wrap_content"
                android:layout_weight="3.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_batch"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <com.demo.store.widgets.spinner.SearchableSpinner
                android:id="@+id/ss_batch"
                android:layout_width="0dp"
                app:hintText="@string/text_choose_batch_scan"
                android:layout_height="wrap_content"
                android:layout_weight="3.5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/text_search_number_pack"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_40dp"
                android:hint="Nhập số phiếu hoặc mã pallet cần tìm"
                android:enabled="false"
                android:textSize="@dimen/text_14sp"
                android:textColor="@android:color/black"
                android:layout_weight="3.5" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/bt_search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_40dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button_blue_small"
                android:gravity="center"
                android:text="@string/text_search"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>


   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rv_history"
       android:background="#E6E6FA"
       android:layout_width="match_parent"
       android:layout_height="match_parent"/>
</LinearLayout>
