<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_toolbar"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="@dimen/size_40dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_centerVertical="true"
                android:padding="@dimen/distance_10dp"
                android:src="@drawable/ic_back" />


            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/distance_8dp"
                android:layout_toRightOf="@+id/img_back"
                android:gravity="center"
                android:text="@string/text_change_password"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/distance_16dp">

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/textInputLayout_OldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/text_old_password"/>

                <EditText
                    android:id="@+id/edt_old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40dp"
                    android:background="@drawable/bg_edittext_stroke_white"
                    android:padding="@dimen/distance_5dp"
                    android:hint="@string/text_enter_old_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/distance_5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/text_new_password"/>

                <EditText
                    android:id="@+id/edt_new_pass"
                    android:layout_width="match_parent"

                    android:layout_height="@dimen/size_40dp"
                    android:background="@drawable/bg_edittext_stroke_white"
                    android:padding="@dimen/distance_5dp"
                    android:hint="@string/text_enter_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/distance_5dp"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/text_confirm_password"/>

                <EditText
                    android:id="@+id/edt_confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/size_40dp"
                    android:background="@drawable/bg_edittext_stroke_white"
                    android:padding="@dimen/distance_5dp"
                    android:hint="@string/text_enter_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_50dp"
                android:background="@drawable/bg_button_blue_small"
                android:layout_marginTop="@dimen/distance_16dp"
                android:gravity="center"
                android:text="@string/text_confirm"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
