<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/size_300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/distance_10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/distance_16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_ip_address"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_14sp" />

        <EditText
            android:id="@+id/edt_ip_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:background="@drawable/bg_edittext_stroke_white"
            android:lines="1"
            android:padding="@dimen/distance_5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_5dp"
            android:text="@string/text_port"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_14sp" />

        <EditText
            android:id="@+id/edt_port"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_40dp"
            android:background="@drawable/bg_edittext_stroke_white"
            android:lines="1"
            android:inputType="number"
            android:padding="@dimen/distance_5dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/gray_button_background"
                    android:text="@string/text_exit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/size_40dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/red_button_background"
                    android:text="@string/text_save"
                    android:textAllCaps="false"
                    android:id="@+id/btn_save"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>