<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#80000000"
    android:id="@+id/layout_main"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/distance_15dp"
        android:layout_marginRight="@dimen/distance_15dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:padding="@dimen/distance_8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_code_group"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_group_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/distance_5dp"
                android:text="@string/text_code_group"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_14sp"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_name_detail"
                android:textColor="@android:color/black"
                android:layout_weight="4"
                android:textStyle="bold"
                android:textSize="@dimen/text_14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/text_number"
                android:layout_marginLeft="@dimen/distance_5dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

    </LinearLayout>
</RelativeLayout>